--- a/services.html
+++ b/services.html
@@ -39,7 +39,7 @@
     <!-- Services Grid -->
     <section class="services-grid">
         <div class="service-card">
-            <img src="D:\Study\WT\MED SITE\freecheckup.jpeg" alt="Medical Checkup">
+            <img src="freecheckup.jpeg" alt="Medical Checkup">
             <div class="service-content">
                 <div class="service-icon">
                     <i class="fas fa-stethoscope"></i>
@@ -51,7 +51,7 @@
         </div>
 
         <div class="service-card">
-            <img src="D:\Study\WT\MED SITE\emegencycare.jpg" alt="Emergency Care">
+            <img src="emegencycare.jpg" alt="Emergency Care">
             <div class="service-content">
                 <div class="service-icon">
                     <i class="fas fa-ambulance"></i>
@@ -63,7 +63,7 @@
         </div>
 
         <div class="service-card">
-            <img src="D:\Study\WT\MED SITE\operationthetre.jpg" alt="Operation Theater">
+            <img src="operationthetre.jpg" alt="Operation Theater">
             <div class="service-content">
                 <div class="service-icon">
                     <i class="fas fa-procedures"></i>
@@ -75,7 +75,7 @@
         </div>
 
         <div class="service-card">
-            <img src="D:\Study\WT\MED SITE\labo.jpeg" alt="Laboratory">
+            <img src="labo.jpeg" alt="Laboratory">
             <div class="service-content">
                 <div class="service-icon">
                     <i class="fas fa-flask"></i>
@@ -87,7 +87,7 @@
         </div>
 
         <div class="service-card">
-            <img src="D:\Study\WT\MED SITE\phar.jpeg"alt="Pharmacy">
+            <img src="phar.jpeg"alt="Pharmacy">
             <div class="service-content">
                 <div class="service-icon">
                     <i class="fas fa-pills"></i>
@@ -99,7 +99,7 @@
         </div>
 
         <div class="service-card">
-            <img src="D:\Study\WT\MED SITE\dental.jpeg"alt="Dental Care">
+            <img src="dental.jpeg"alt="Dental Care">
             <div class="service-content">
                 <div class="service-icon">
                     <i class="fas fa-tooth"></i>
@@ -111,7 +111,7 @@
         </div>
 
         <div class="service-card">
-            <img src="D:\Study\WT\MED SITE\cardio.jpeg" alt="Cardiology">
+            <img src="cardio.jpeg" alt="Cardiology">
             <div class="service-content">
                 <div class="service-icon">
                     <i class="fas fa-heartbeat"></i>
@@ -123,7 +123,7 @@
         </div>
 
         <div class="service-card">
-            <img src="D:\Study\WT\MED SITE\pediacare.jpeg"alt="Pediatrics">
+            <img src="pediacare.jpeg"alt="Pediatrics">
             <div class="service-content">
                 <div class="service-icon">
                     <i class="fas fa-baby"></i>
@@ -135,7 +135,7 @@
         </div>
 
         <div class="service-card">
-            <img src="D:\Study\WT\MED SITE\phytherapy.jpeg" alt="Physical Therapy">
+            <img src="phytherapy.jpeg" alt="Physical Therapy">
             <div class="service-content">
                 <div class="service-icon">
                     <i class="fas fa-walking"></i>
@@ -147,7 +147,7 @@
         </div>
 
         <div class="service-card">
-            <img src="D:\Study\WT\MED SITE\neuro.jpeg" alt="Neurology">
+            <img src="neuro.jpeg" alt="Neurology">
             <div class="service-content">
                 <div class="service-icon">
                     <i class="fas fa-brain"></i>
