--- a/doctors.html
+++ b/doctors.html
@@ -39,7 +39,7 @@
     <section class="doctors-grid">
         <!-- Doctor 1 -->
         <div class="doctor-card">
-            <img src="D:\Study\WT\MED SITE\doc1.png" alt="Doctor">
+            <img src="doc1.png" alt="Doctor">
             <h3>Dr. Sarah Wilson</h3>
             <p>CARDIOLOGY</p>
             <div class="social-links">
@@ -51,7 +51,7 @@
 
         <!-- Doctor 2 -->
         <div class="doctor-card">
-            <img src="D:\Study\WT\MED SITE\doc2.png" alt="Doctor">
+            <img src="doc2.png" alt="Doctor">
             <h3>Dr. Michael Chen</h3>
             <p>NEUROLOGY</p>
             <div class="social-links">
@@ -63,7 +63,7 @@
 
         <!-- Doctor 3 -->
         <div class="doctor-card">
-            <img src="D:\Study\WT\MED SITE\doc3.png" alt="Doctor">
+            <img src="doc3.png" alt="Doctor">
             <h3>Dr. James Rodriguez</h3>
             <p>ORTHOPEDICS</p>
             <div class="social-links">
@@ -75,7 +75,7 @@
 
         <!-- Doctor 4 -->
         <div class="doctor-card">
-            <img src="D:\Study\WT\MED SITE\doc6.jpeg" alt="Doctor">
+            <img src="doc6.jpeg" alt="Doctor">
             <h3>Dr. Emily Parker</h3>
             <p>PEDIATRICS</p>
             <div class="social-links">
@@ -87,7 +87,7 @@
 
         <!-- Doctor 5 -->
         <div class="doctor-card">
-            <img src="D:\Study\WT\MED SITE\doc10.jpg" alt="Doctor">
+            <img src="doc10.jpg" alt="Doctor">
             <h3>Dr. David Thompson</h3>
             <p>ONCOLOGY</p>
             <div class="social-links">
@@ -99,7 +99,7 @@
 
         <!-- Doctor 6 -->
         <div class="doctor-card">
-            <img src="D:\Study\WT\MED SITE\doc7.jpeg" alt="Doctor">
+            <img src="doc7.jpeg" alt="Doctor">
             <h3>Dr. Maria Garcia</h3>
             <p>DERMATOLOGY</p>
             <div class="social-links">
@@ -111,7 +111,7 @@
 
         <!-- Doctor 7 -->
         <div class="doctor-card">
-            <img src="D:\Study\WT\MED SITE\doc5.jpeg" alt="Doctor">
+            <img src="doc5.jpeg" alt="Doctor">
             <h3>Dr. Robert Kim</h3>
             <p>PSYCHIATRY</p>
             <div class="social-links">
@@ -123,7 +123,7 @@
 
         <!-- Doctor 8 -->
         <div class="doctor-card">
-            <img src="D:\Study\WT\MED SITE\doc8.jpeg" alt="Doctor">
+            <img src="doc8.jpeg" alt="Doctor">
             <h3>Dr. Lisa Anderson</h3>
             <p>GYNECOLOGY</p>
             <div class="social-links">
@@ -135,7 +135,7 @@
 
         <!-- Doctor 9 -->
         <div class="doctor-card">
-            <img src="D:\Study\WT\MED SITE\doc4.jpeg" alt="Doctor">
+            <img src="doc4.jpeg" alt="Doctor">
             <h3>Dr. John Smith</h3>
             <p>UROLOGY</p>
             <div class="social-links">
