--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
         <div class="welcome-image">
             <!-- Replace with actual image -->
             <!-- Image of two medical professionals in white coats smiling -->
-            <img src="D:\Study\WT\MED SITE\Rectangle 3.png" alt="Medical Professionals">
+            <img src="Rectangle 3.png" alt="Medical Professionals">
         </div>
     </section>
 
@@ -115,7 +115,7 @@
         <div class="doctors-grid">
             <div class="doctor-card">
                 <!-- Replace with actual doctor image -->
-                <img src="D:\Study\WT\MED SITE\doc1.png"alt="Doctor's Name">
+                <img src="doc1.png"alt="Doctor's Name">
                 <h3>Dr. Sarah Rafferti</h3>
                 <p>NEUROLOGY</p>
                 <div class="social-links">
@@ -127,7 +127,7 @@
             </div>
             <div class="doctor-card">
                 <!-- Replace with actual doctor image -->
-                <img src="D:\Study\WT\MED SITE\doc2.png"alt="Doctor's Name">
+                <img src="doc2.png"alt="Doctor's Name">
                 <h3>Dr. John Doe</h3>
                 <p>NEUROLOGY</p>
                 <div class="social-links">
@@ -138,7 +138,7 @@
             </div>
             <div class="doctor-card">
                 <!-- Replace with actual doctor image -->
-                <img src="D:\Study\WT\MED SITE\doc3.png" alt="Doctor's Name">
+                <img src="doc3.png" alt="Doctor's Name">
                 <h3>Dr. Mitchell Johnson </h3>
                 <p>NEUROLOGY</p>
                 <div class="social-links">
