--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <div class="doctors-grid">
             <!-- Replace src with actual doctor images -->
             <div class="doctor-card">
-                <img src="D:\Study\WT\MED SITE\doc1.png" alt="Dr. Sarah Johnson">
+                <img src="doc1.png" alt="Dr. Sarah Johnson">
                 <h4>Dr. Sarah Johnson</h4>
                 <p>Cardiologist</p>
                 <div class="social-links">
@@ -187,7 +187,7 @@
                 </div>
             </div>
             <div class="doctor-card">
-                <img src="D:\Study\WT\MED SITE\doc2.png" alt="Dr. Michael Smith">
+                <img src="doc2.png" alt="Dr. Michael Smith">
                 <h4>Dr. Michael Smith</h4>
                 <p>Neurologist</p>
                 <div class="social-links">
@@ -196,7 +196,7 @@
                 </div>
             </div>
             <div class="doctor-card">
-                <img src="D:\Study\WT\MED SITE\doc3.png" alt="Dr. David Wilson">
+                <img src="doc3.png" alt="Dr. David Wilson">
                 <h4>Dr. David Wilson</h4>
                 <p>Orthopedic</p>
                 <div class="social-links">
